--- a/001-where.org
+++ b/001-where.org
@@ -66,7 +66,7 @@ Verk hissed again but Grav now could see that he was huffing with contempt, with
 
 "What are you and Gog up to? Hopefully something constructive."
 
-"Yes, I think so, Father-brother Verk. We are going to find more value stone where we have been for several moons. We have quite an infrastructure there. We think there is a vein of them following the river, but we didn't have time to look around much last time."
+"Yes, I think so, Father-brother Verk. We are going to find more value-stone where we have been for several moons. We have quite an infrastructure there. We think there is a vein of them following the river, but we didn't have time to look around much last time."
 
 "Get some strenuous work in while you're at it. If you bring me a value-stone agreed by all to be worth three deer carcass I will let you out of this upcoming club-drill. You probably want to frolic in the woods."
 
