--- a/001-where.org
+++ b/001-where.org
@@ -76,7 +76,7 @@ Verk hissed again but Grav now could see that he was huffing with contempt, with
 
 He turned on his heels and said to Grav while leaving, "Keep your entails on the inside."
 
-The click of his hyena spurs[fn:: These are raptor talon that are strung by sinew so that they point backwards and downwards from the heel, with just one talon per foot, but they are large and serve their function. They are fastened strongly, but often with just enough slack so that the talon makes an audible "click" while the wearer walks around the in-cave.] faded down the entranceway.
+The click of his hyena spurs[fn:: These are raptor talon that are strung by sinew so that they point backwards and downwards from the heel, with just one talon per foot, but they are large and serve their function. They are fastened strongly, but often with just enough slack so that the talon makes an audible "click" while the wearer walks around in-cave.] faded down the entranceway.
 
 'I didn't believe an After-Die-Monster scat-pile of that!!', thought Grav, with fury building inside him. 'I just go into dying-monkey mode[fn:: What we would call 'zombie mode'.] and simply say the things I'm /supposed/ to say!', and with that Grav added a twinge of shame to the mix of feelings.
 
