--- a/001-where.org
+++ b/001-where.org
@@ -90,7 +90,7 @@ Gog was there, clearly lost in thought but aware of Grav's arrival.
 
 In each hand, Grav was carrying a large hemp basket, heavy with the best mining equipment they could conjure.
 
-As Grav approached the glade that at the very crook of the confluence[fn:: Where, legend has it, the Crec clan and culture had its beginnings.]. Taking /the short way/ Grav had to stop and a xxx rope??xxx bridge crossing The Great Meal Stone's last angry-cauldron, which delayed him a half-palm.
+As Grav approached the glade that at the very crook of the confluence[fn:: Where, legend has it, the Crec clan and culture had its beginnings.]. Taking /the short way/ Grav had to stop and repair the twist-vine bridge crossing The Great Meal Stone's last angry-cauldron, which delayed him a half-palm.
 
 Gog watched expressionless as Grav approached.
 
