--- a/001-where.org
+++ b/001-where.org
@@ -96,7 +96,9 @@ Gog watched expressionless as Grav approached.
 
 Grav knew from experience that one had to pretty much shout over the thunder of the cascades. The Great Meal Stone came from the northwest and The Lame Rhino came from the northeast. They converged dramatically to form the Helpful Monkey, both picking up speed and rage from the steepening, rocky surroundings.
 
-All this angry water out of place created a truly odd and kind of magical Forest-shaking, low rumble that was something like an earthquake that has been ongoing for thousands of years. The dirt doesn't mind. It just gets shaken about. And it turns out plants didn't mind it either, or as many suspect, were just a bit more productive because of the light massage. The occasional tree here and there didn't move visibly, but a hand on the trunk would bring your mind back to the power around you. Trees, and rocks and whatever else hummed harmonically, which added some color to the sea of white noise in the area. Gog had once put a straight, hard, ridged stick hard against a boulder near one of the more dramatic cascades. Putting his ear up to the other end, he could definitely hear an /audible/ hum that was clear and distinct from the surrounding tempest of noise.
+All this angry water out of place created a truly odd and kind of magical Forest-shaking, low rumble that was something like an earthquake that has been ongoing for thousands of years. The dirt doesn't mind. It just gets shaken about. And it turns out plants didn't mind it either, or as many suspect, were just a bit more productive because of the light massage. The occasional tree here and there didn't move visibly, but a hand on the trunk would bring your mind back to the power around you. Trees, and rocks and whatever else hummed harmonically, which added some color to the sea of white noise in the area.
+
+Gog had once put a straight, stiff stick hard against a boulder near one of the more dramatic cascades. Putting his ear up to the other end, he could definitely hear an /audible/ hum that was clear and distinct from the surrounding tempest of noise.
 
 Grav handed the heavier of the baskets to Gog. He shouted, "Whatever we do, let's get the scat downstream!"
 
