--- a/001-where.org
+++ b/001-where.org
@@ -106,7 +106,9 @@ Gog nodded, turned, and led the way.
 
 The practiced, efficient jog an experienced Forest-man slipped into while following an established path, especially one that follows a river, became hypnotic in a way that Grav loved. The noisy, often unhelpful part of your mind had no choice but to keep making plans and rapidly solving puzzles for one's next steps, which your legs had to perform with a perfect, unbroken rhythm, and sureness.
 
-The top of his vision saw the upcoming terrain, which he kept scanning for possible complications. Lower, nearer part of his vision, he made fine adjustments to his plans, given new information: This rock has wet moss. That footfall has deer scat that we mustn't stir up[fn:: Hunters knew that if the were just /traveling/ and were willing to sacrifice game abundance in the area for maybe the next few palms, it would definitely do no harm to purposely step in, and spread the scat of any predator.]. That limb will break if I land this stride on it. And of course there was the built-in constraint of trying to make as little noise as possible, which added to the immersive challenged that often helped him to think more clearly.
+This also had to be done in time with a rhythm that maximized your breathing and even your heartbeat's efficiency; a serious constraint, if you were a long-term thinker. Exhale on down-stride when possible, especially if you think your heart needs a good sqeeze; inhale on the rebound, when your torso unwinds itself like a spring, guided by the big breathing muscles to fill your lungs with air.
+
+The top of your vision saw the upcoming terrain, which you keep scanning for possible complications. In the lower, nearer part of your vision, you make fine adjustments to your macro plans, given new information: This rock has wet moss. That footfall has deer scat that we mustn't stir up[fn:: Hunters knew that if the were just /traveling/ and were willing to sacrifice game abundance in the area for maybe the next few palms, it would definitely do no harm to purposely step in, and spread the scat of any predator, but freshened game scat attracted predators.]. That limb will break if I land this stride on it. And of course there was the built-in constraint of trying to make as little noise as possible, which added to the immersive challenged that often helped him to think more clearly.
 
 This, he discovered, was cultivatable state: Get into the groove right away and you'll have a pleasant ride as a passenger in your own body. Your mind is now free to wander about the Universe.
 
