--- a/001-where.org
+++ b/001-where.org
@@ -110,7 +110,7 @@ This also had to be done in time with a rhythm that maximized your breathing and
 
 The top of your vision saw the upcoming terrain, which you keep scanning for possible complications. In the lower, nearer part of your vision, you make fine adjustments to your macro plans, given new information: This rock has wet moss. That footfall has deer scat that we mustn't stir up[fn:: Hunters knew that if the were just /traveling/ and were willing to sacrifice game abundance in the area for maybe the next few palms, it would definitely do no harm to purposely step in, and spread the scat of any predator, but freshened /game/ scat attracted predators.]. That limb will break if I land this stride on it. And of course there was the built-in constraint of trying to make as little noise as possible, and to not step on anything spiny and deadly, and to continue making no noise even if you do, which added to the immersive challenged that often helped one to think more clearly. So Grav thought at least.
 
-This, he discovered, was cultivatable state: Get into the groove right away and you'll have a pleasant ride as a passenger in your own body. Your mind is now free to wander about the Universe.
+This, he discovered, was a cultivatable state: Get into the groove right away and you'll have a pleasant ride as a passenger in your own body. Your mind is now free to wander about the Universe.
 
 Gog felt the same way. For them, even more than most elite Hunters, traveling through the forest was fast, reliably breezy, pleasant and just no big deal. It was a kind of lounging for them. It could be done for hours on end with few breaks (which were their own treat), possibly bringing you to a part of the Forest that, despite being a well-traveled cave man of late-age, you had never seen before. And there were landscapes that even these people, however traveled of the infinite, abundant Forest, would stop stunned to gauze at for lengths of time, mouth agape.
 
