--- a/001-where.org
+++ b/001-where.org
@@ -112,7 +112,7 @@ The top of your vision saw the upcoming terrain, which you keep scanning for pos
 
 This, he discovered, was a cultivatable state: Get into the groove right away and you'll have a pleasant ride as a passenger in your own body. Your mind is now free to wander about the Forest.
 
-Gog felt the same way. For them, even more than most elite Hunters, traveling through the forest was fast, reliably breezy, pleasant and just no big deal. It was a kind of lounging for them. It could be done for hours on end with few breaks (which were their own treat), possibly bringing you to a part of the Forest that, despite being a well-traveled caveman of late-age[fn:: A classification to which both men belong. Grav is 36 and Gog 37.], you had never seen before. And there were landscapes that even these people, however traveled of the infinite, abundant Forest, would stop stunned to gauze at for lengths of time, mouth agape.
+Gog felt the same way. For them, even more than most elite Hunters, traveling through the forest was fast, reliably breezy, pleasant and just no big deal. It was a kind of lounging for them. It could be done for hours on end with few breaks (which were their own treat), possibly bringing you to a part of the Forest that, despite being a well-traveled caveman of late-age[fn:: A classification to which both men belong. At this time, Grav is 36 and Gog 37.], you had never seen before. And there were landscapes that even these people, however traveled of the infinite, abundant Forest, would stop stunned to gauze at for lengths of time, mouth agape.
 
 This meditation and thinking went on for both men for hours as they flexed and honed their fundamental survival systems, both muscle and mind. It was surprisingly pleasant to be so wasteful of energy, Grav often thought.
 
