--- a/001-where.org
+++ b/001-where.org
@@ -114,7 +114,7 @@ This, he discovered, was a cultivatable state: Get into the groove right away an
 
 Gog felt the same way. For them, even more than most elite Hunters, traveling through the forest was fast, reliably breezy, pleasant, and just no big deal. It was a kind of lounging for them. It could be done for hours on end with few breaks (which were their own treat), possibly bringing you to a part of the Forest that, despite being a well-traveled caveman of late-age[fn:: A classification to which both men belong. At this time, Grav is 36 and Gog 37.], you had never seen before. And there were landscapes that even these people, however traveled of the infinite, abundant Forest, would stop stunned to gauze at for lengths of time, mouth agape.
 
-This meditation and thinking went on for both men for hours as they flexed and honed their fundamental survival systems, both muscle and mind. It was surprisingly pleasant to be so wasteful of energy, Grav often thought.
+This meditation and thinking went on for both men for about a quarter hour xxx as they flexed and honed their fundamental survival systems, both muscle and mind. It was surprisingly pleasant to be so wasteful of energy, Grav often thought.
 
 Their usual first stop on this route was a small falls near The Great Crocodile lake, a semicircular lake near a bend in The Lame Rhino. Standing on a high stone on the upper bank, you could see about half of the lake; the far, rounded shore. It had its name due five-man-long, angry bull[fn:: You rightly ask, 'how do we know?' The story is known as "Khrob's Muddy Trap-Burrow"] crocodile that would not bother with you so long as you didn't get within a quarter mile of /its/ lake. The croc died in the men's youth, but they both remember having to take the shortcut across the adjacent bend in the river, and being lectured by their parents all the while about exactly what the situation was and exactly what the stakes were. Parents knew how and when to scare their children dumb, to great effect. Crec parents were otherwise reputed to be very loving toward their children. Mostly. It was considered a "daring" thing to follow the river here until just about all-finger years ago.
 
