--- a/001-where.org
+++ b/001-where.org
@@ -116,7 +116,9 @@ Gog felt the same way. For them, even more than most elite Hunters, traveling th
 
 This meditation and thinking went on for both men for about three quarters of an hour xxx as they flexed and honed their fundamental survival systems, both muscle and mind. It was surprisingly pleasant to be so wasteful of energy, Grav often thought.
 
-Their usual first stop on this route was a small falls near The Great Crocodile lake, a semicircular lake near a bend in The Lame Rhino. Standing on a high stone on the upper bank, you could see about half of the lake; the far, rounded shore. It had its name due five-man-long, angry bull[fn:: You rightly ask, 'how do we know?' The story is known as "Khrob's Muddy Trap-Burrow"] crocodile that would not bother with you so long as you didn't get within a quarter mile of /its/ lake. The croc died in the men's youth, but they both remember having to take the shortcut across the adjacent bend in the river, and being lectured by their parents all the while about exactly what the situation was and exactly what the stakes were. Parents knew how and when to scare their children dumb, to great effect. Crec parents were otherwise reputed to be very loving toward their children. Mostly. It was considered a "daring" thing to follow the river here until just about all-finger year ago.
+Their usual first stop on this route was a small falls near The Great Crocodile lake, a semicircular lake near a bend in The Lame Rhino. Standing on a high stone on the upper bank, you could see about half of the lake; the far, rounded shore. It had its name due five-man-long, angry bull[fn:: You rightly ask, 'how do we know?' The story is known as "Khrob's Muddy Trap-Burrow"] crocodile that would not bother with you so long as you didn't get within a quarter mile of /its/ lake.
+
+The croc died in the men's youth, but they both remember having to take the shortcut across the adjacent bend in the river, and being lectured by their parents all the while about exactly what the situation was and exactly what the stakes were. Parents knew how and when to scare their children dumb, to great effect. Crec parents were otherwise reputed to be very loving toward their children. Mostly. It was considered a "daring" thing to follow the river here until just about all-finger year ago.
 
 In the comparative quiet, with the nearby cascade only a gurgle, Gog turns to Grav.
 
