--- a/001-where.org
+++ b/001-where.org
@@ -120,7 +120,7 @@ Their usual first stop on this route was a small falls near The Great Crocodile 
 
 The croc died in the men's youth, but they both remember having to take the shortcut across the adjacent bend in the river, and being lectured by their parents all the while about exactly what the situation was and exactly what the stakes were. Parents knew how and when to scare their children dumb, to great effect. Crec parents were otherwise reputed to be very loving toward their children. Mostly. It was considered a "daring" thing to follow the river here until just about all-finger year ago.
 
-In the comparative quiet, with the nearby cascade only a gurgle, Gog turns to Grav.
+In the comparative quiet, with the nearby cascade only a gurgle, Gog turned to Grav.
 
 "So, I was thinking. These veins run in parallel, probably. I mean, I've seen that in lots of places with regular rock. And the vein goes from within the earth, upwards, which is /also/ where you see the parallel veins in regular rock. A vein of reflect-stone[fn:: Quartz. Both for the obvious reason and also because of what is being discussed here: a vein of quarts has concentrated mirror powers strong enough to create another one, just like it, feet away. It is thought that this has never been observed because whenever they appeared, they must have appeared together.] often has a twin a few feet or yards away, to one side or the other. And most value-stone grow in neat patterns, just like reflect-stone.
 
