--- a/001-where.org
+++ b/001-where.org
@@ -122,7 +122,7 @@ The croc died in the men's youth, but they both remember having to take the shor
 
 In the comparative quiet, with the nearby cascade only a gurgle, Gog turned to Grav.
 
-"So, I was thinking. These veins run in parallel, probably. I mean, I've seen that in lots of places with regular rock. And the vein goes from within the earth, upwards, which is /also/ where you see the parallel veins in regular rock. A vein of reflect-stone[fn:: Quartz. Both for the obvious reason and also because of what is being discussed here: a vein of quarts has concentrated mirror powers strong enough to create another one, just like it, feet away. It is thought that this has never been observed because whenever they appeared, they must have appeared together.] often has a twin a few feet or yards away, to one side or the other. And most value-stone grow in neat patterns, just like reflect-stone.
+"So, I was thinking. These veins run in parallel, probably. I mean, I've seen that in lots of places with regular rock. And the vein goes from within the earth, upwards, which is /also/ where you see the parallel veins in regular rock. A vein of reflect-stone[fn:: Quartz. Both for the obvious reason and also because of what is being discussed here: a vein of quarts has concentrated mirror powers strong enough to create another one, just like it, feet away. It is thought that the formation of a reflected vein of reflect-stone has never been observed because whenever they appeared, they must have appeared together.] often has a twin a few feet or yards away, to one side or the other. And most value-stone grow in neat patterns, just like reflect-stone.
 
 Since we know that the river has eroded much of one side, snaking in and out; it pretty much parallels our first 'vein'[fn:: Gog was being colorful with his language because when they said 'vein' it referred to a /pattern of deposits/ and not much more. It was assumed to be a vein of sorts because it seemed to go in a straight line and keep producing even if you dug downward.], I'm thinking lets concentrate on upstream where it cuts in and out of a vein that might have been there."
 
