--- a/001-where.org
+++ b/001-where.org
@@ -146,15 +146,17 @@ Gog didn't react but continue to stared at a falls. He spoke softly at first.
 
 "Mmm", Gog's eyes squinted slightly.
 
-"I haven't been alone with him much. I mostly just try to avoid that possibility, honestly. I kind of get the feeling that he needs to let off some steam[fn:: Lit. "throw some rocks"] a lot of the time and I feel like, whoever's job that is, it has got to be a lot of 'work', if you know what I mean.
+"I haven't been alone with him much. I mostly just try to avoid that possibility, honestly. I kind of get the feeling that he needs to throw some rocks[fn:: "Let off steam."] /at/ people a lot of the time and I feel like, whoever's job it is to put up with, it has got to be a lot of 'work', if you know what I mean.
 
 Lots of making sure everything's going according to 'plan', but the plan also seems to change over time. Lots of getting into your business if he feels you've got a job to do for him. It looks like he likes to really let lose and let folks know not to cross him."
 
 Grav interjected, "Don't you feel like that could have some push-back? Treating people that way? I mean, he and everyone else knows that he's way up there and above criticism. After a while of that I think a caveman could stop seeing his own faults."
 
-"Heh. Yeah, I have definitely seen that effect in play with some people. It is a thing. And I don't think you're way off the mark.", agreed Gog.
+"Heh. Yeah, I have definitely seen that effect in play with some people. It exists like rocks[fn:: "it is a thing"]. And I don't think you're way off the mark.", agreed Gog.
 
 "And also," Grav expended on his unoriginal theory, "wouldn't that kind of thing feed back on itself, rapidly?
+
+xxx yyy xxx
 
 If you've driven those away who just /reasonably/ object to whatever urgent thing you're being lectured on, what's left over are a particular kind of caveperson. Kind of the last-part I'll call it. Or no, 'tail', like what you see disappearing into the bush when you've scared off a big lizard. There's a part that hangs around a bit longer. The 'tail'. Father-Brother Verk's tail of hangers-on are desperate for his approval. They will silently undergo /even worse/ mistreatment by him[fn:: They both felt a stir referring to Verk this way.] which in turn means that mistreatment can /expand/ and meet the new allowance, and so a person's[fn:: Gog was trying to steer back into the /abstract/ caveperson as the topic of conversation.] behavior can get /more/ extreme, which scares those around even more, making them willing to just let any kind of behavior go; pretend it didn't happen. Just don't get 'kicked out', you know what I mean. Rather simple people, usually."
 
