--- a/001-where.org
+++ b/001-where.org
@@ -1,3 +1,4 @@
++title: A Miraculous Find
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
 
 Plans for the next morning, included: Wander around in the woods with Gog. Gog and Grav were cousins. Pretty much the same age, much-little.
