--- a/000-preface.org
+++ b/000-preface.org
@@ -1,4 +1,4 @@
-+title: Preface
++title: Verk Sends a Message
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
 
 Theirs is a mostly peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green at just the right frequency. The Crec are a sort of "cavemen". This word will be used unironically throughout. It's how they would describe themselves. In fact, they would fit a surprising number of your stereotypes about cavepeople.
