--- a/001.org
+++ b/001.org
@@ -13,9 +13,9 @@ It's rather beautiful. The Crec are aware, just as you are, that there is such a
 
 We will get to dinosaurs. It's complicated.
 
-And pretty much everyone lives in a cave, at least in Crec. Let's get that out of the way. Cave, the literal word meaning that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
+And pretty much everyone lives in a cave, at least in Crec. Cave, the literal word meaning that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
 
-What's sometimes not so beautiful is how each opening often looks like a rather droopy upper eyelid the morning after a socially-acceptable, generous quantity of good juff.
+What's sometimes not so beautiful is how many cave opens often look like a rather droopy upper eyelid the morning after a socially-acceptable, generous quantity of good juff.
 
 Fire produces smoke, and smoke must go /somewhere/. As the Crec saying goes, "Where there is fire, there is smoke." A bit of light in the early evening is nice. A bit of warmth is even nicer, but not always needed. All year long, fires get used for something or other. And that smoke makes a mess. You would be forgiven if you thought someone was trying to smoke someone else out of their cave. Of course that happens too. There's even a military refinement of this idea: Colonel Thag's Burrow Buster.
 
