--- a/001.org
+++ b/001.org
@@ -23,7 +23,7 @@ The Zog clan, whom you will soon meet, live in such a cave. A nice cave, for sur
 
 A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the grandkids to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat. The soot stains above the opening to the parlor were an especially large, especially shameful bit of soot-pallet. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing. Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
 
-Fires make for a cozy cave, and the grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would have/ mean schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
+Fires make for a cozy cave, and the grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would have/ meant schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
 
 She was currently shouting at Grav, Son of Zog, who was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable sit-ham-stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud. It seemed like there was sometimes so much passion-inspired noise coming from his stepmother, it really didn't seem worth trying to mine for the gems (or "value-stone", which is used by the Crec in the same way we use the word "gem" sometimes: "I can't seem to find my favorite spiked club anywhere. It was a /real value-stone/!")
 
