--- a/001.org
+++ b/001.org
@@ -110,7 +110,7 @@ There it was after a gasping, wheezing sprint up the steep hillside, our "secret
 
 I had spied something on the way up and decided to have one over on old Lu. I say, "Well by rights, Lu, even as my friend, you need to be the one to go out there and do this. You know I got a family to support and my new position at camp comes with a lot of responsibility, one that there just ain't a lot of good replacements for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry. I'll hear you out my friend, but..."
 
-We could see clearly that the Clorp were making ground, slowly. It looked like a great storm of people. Vast, like waves of blood an people washing up against the shores of Rhino-Scat. We had indeed gotten lost in time a bit about the urgency of our mission. The sight was awesome.
+We could see clearly that the Clorp were making ground, slowly. It looked like a great storm of people. Vast waves of blood an' people washing up against the shores of Rhino-Scat. We had indeed gotten lost in time a bit about the urgency of our mission. The sight was awesome.
 
 #+end_quote
 An inexplicable snicker from a younger Crec was shushed by his mother.
