--- a/001.org
+++ b/001.org
@@ -123,7 +123,7 @@ Having cleared my head and realizing I was in the middle of some unnecessary non
 I saw a tear forming so I figured I should get a move on. Did I mention I was in a hurry now?
 
 #+end_quote
-Laugher.
+Laughter.
 #+begin_quote
 
 "Lu!", I says, "Lu I was just having a go at ya pal! I spied a stick on the way up that should be long enough. I'll go back and fetch it! You shoulda seen your face!"
@@ -135,7 +135,7 @@ Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. My
 Brfgf. Bugrgl. Bunjle. Brrrkk.
 
 #+end_quote
-Verk, in his way, was trying to make sound of a thousand mighty boulders on their way to smite the enemy.
+Verk, in his way, was trying to make the sound of a thousand mighty boulders on their way to smite the enemy.
 #+begin_quote
 
 I mean these things come crashing down, leveling everything! There were trees a man around that were not just snapped, they were sheered off at the floor, after which their roots were pounded into pulp. The land on that side of the hill is still good for working to this day, and it was only known as Morning-sun-left-side[fn:: North] Rhino-Scat Woods before that. And a woods it was.
