--- a/001.org
+++ b/001.org
@@ -157,13 +157,13 @@ The audience collectively gave a pained, but soft groan of regret and some gentl
 And that was the end of The Battle of the Snake-Meal. It really was over just about that fast. We really got lucky, plus, you can be sure, we stroked all the snails we could find[fn:: This is a bit of luck-giving for the Crec. Rabbit's foot, but taken just a bit more literally. The snail comes up a lot in their mythology.]. At this point, the Clorp who weren't dead were running for their lives, leaving us a wide swath of good farming land to occupy. Which we used to great effect in years to come, leveraging our successes[fn:: This is the great, mostly unoccupied bulge to Crec's south that still makes up most of its territory.].
 #+end_quote
 
-A quiet, knowing laugh from audience makes its way around the burrow.
+A quiet, knowing laugh from the audience made its way around the burrow.
 
-Verk slowly sat back in his carefully shaped and ornamented stone chair. He slowly interlaced his fingers over his remarkably big belly, let out long, slow, quiet sigh, and seemed to be challenging the audience to interrupt his rest.
+Verk slowly sat back in his carefully shaped and ornamented stone chair. He slowly interlaced his fingers over his remarkably big belly, let out a long, slow, quiet sigh, and seemed to be challenging the audience to interrupt his rest.
 
 Indeed, no one was quite sure what to do. It was understood that you stay seated and reverent, but meanwhile your mind was sprinting around trying to guess exactly the right posture and empathetic tilt-of-the-head, much less /saying/ anything. It was a very quiet sort of panic.
 
-It had been a while, possibly the longest pause-for-effect at the time. /What if he he's/ dead?, some of the audience dared to allow themselves to wonder. The subsequent thoughts varied considerably.
+It had been a while, possibly the longest pause-for-effect at the time. /What if he's/ dead?, some of the audience dared to allow themselves to wonder. The subsequent thoughts varied considerably.
 
 Verk slowly opened his eyes. "Now, do any of the precious cavechildren in our audience have any questions? Maybe you get an idea of what silly old Verk is trying to say here?" For Verk especially loved the children's questions. He made the sweetest mall-Santa[fn:: The Crec would say 'looks-nice-traveler'.] smile he could muster.
 
@@ -171,7 +171,7 @@ One of the older male cousins[fn:: The Zog clan, like all, was ranked in a very 
 
 "Father-Brother Verk, why was the boulder-rhino kept a secret from the Crec army?"
 
-Verk was sure had covered this, and was duly annoyed. He stared at the boy for what seemed like a very long time. Naturally the boy fidgeted.
+Verk was sure that he had covered this, and was duly annoyed. He stared at the boy for what seemed like a very long time. Naturally the boy fidgeted.
 
 "Little rhino-buck, do you remember me talking about that? It's not known nor is it likely ever to be known. /Genuine/ historical research has come up empty, so far, I'm afraid. You're a clever lad. Have a seat, please."
 
@@ -179,6 +179,7 @@ A girl in her late teens, that could only charitably be considered a child stood
 
 "Father-Brother Verk," Verk thought she had rushed the whole name part. "Were there any other things we could have done to avoid all this dying, for everybody? Like..." She looked around. "could we just maybe get along with and share with the other tribe? After all, Nature has given us all this. Who has the claim?"
 
+xxxx something dangling:
 Verk knew that putting his hand anywhere near his face, it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
 
 "Miss." He thought he would mix in just a dash of good-talking-to, as a signal to others as well. "I believe a lot of dedicated Forest Heroes put in a lot of blood, sweat, and dare I say lives, in far too many cases."
@@ -191,6 +192,7 @@ Snickers.
 
 "These men you are learning about today were quite capable and paid a high price; all of them. Miss, what have you done for your Forest lately?" That last bit Verk thought might have a bit more sting than intended.
 
+xxx awkward:
 There was a muttering in the audience, and the mood, as it had been pretty much all along, got to be ever more glum. Even during his speak Verk had seem off, distracted, irritated. Was he well?
 
 "Miss, I mean every bit of love and respect for you, rhino-calf. Let us reflect on what happened and the true magnitude of it. Let us never forget..."
@@ -233,7 +235,7 @@ In another fluid motion that belied his size and shape, Verk had set the girl do
 
 He began to pace back and forth on his large dais.
 
-He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dais. His slightly pinker face was facing the floor at a fixed angle.
+He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dais. His now slightly pinker face was facing the floor at a fixed angle.
 
 Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[fn:: Aside from being cute and a good way to express one's impressions when encountering something "dear", the /hide/ of a rhino calf was exactly the right combination, if slaughtered at the right time, in the right way, of supple, tough, and long-wearing. It made a perfect armor and, as it is comfortable, found its way into the "ceremonial" wardrobe of many admired cavemen, actual solders and otherwise.] skin ceremonial uniform with dignity and began.
 
@@ -253,7 +255,7 @@ And the things that the /Clorp/ have /caused to come to pass/ sting less with ev
 
 Verk let that sink in, while staring tearfully above the heads of the audience. He had paused mid-gesture with his arms to his side and palms upward.
 
-The audience considered this for a while and waited for the next cue from lecturer. Verk slowly lowered and relaxed his arms, and then dramatically rest his chin on his chest, looking at the dais.
+The audience considered this for a while and waited for the next cue from their lecturer. Verk slowly lowered and relaxed his arms, and then dramatically rest his chin on his chest, looking at the dais.
 
 The audience rightly guessed that this concluded his talk, and so cheered "reverently" as best they could.
 
@@ -281,7 +283,7 @@ Verk's voice became calm, clear, and purposeful.
 
 "Here is what's what, you inept, disrespectful, ruinous young man." Verk closed his eyes and inhaled slowly and smoothly through his nose.
 
-"I know exactly what you are /thinking/, and what's more, I know exactly what you have /done/. It will not stand, and you will be made to pay. After which, I grant you the privileged of getting on your knees before all and convincing us of your /genuine/ remorse and renewed understanding.
+"I know exactly what you are /thinking/, and what's more, I know exactly what you have /done/. It will not stand, and you will be made to pay. After which, I will grant you the privileged of getting on your knees before all and convincing us of your /genuine/ remorse and renewed understanding.
 
 You are my blood, and there is a bond and love that transcends almost all things. What you need to do is work hastily on the /almost/ before you cross a line, child."
 
