--- a/002.org
+++ b/002.org
@@ -33,7 +33,7 @@ The Crec had the kind of sophistication and coordination abilities that you migh
 
 And as the day before, Verk and Grav found themselves in such a "conversation" this morning. But this time, there were no ears to witness. Both men were noted early-risers. And both men were practiced at judiciously using the relief-borrow for "clay-talk".
 
-Verk had, what for Grav was a very unsettling characteristic as a person: He was a complete prolapsed-bison-rectum whenever he and Grav talked in truly private circumstances. He would be a slapper of shoulders and grinner of grins in more-or-less public circumstances. He seemed to be spending his life pretending to run for Elders-Quarum. As for his public behavior, something very close to that would be the only reasonable assumption for a neutral observer: /This person appears to be trying to sell his persona actively to people for some gain/, a very articulate and objective caveperson would say. And if he just shuts that off completely and becomes a different, increasingly nasty person in his presence, Grav was not just quite sure what to do with that.
+Verk had, what for Grav was a very unsettling characteristic as a person: He was a complete prolapsed-bison-rectum whenever he and Grav talked in truly private circumstances. He would be a slapper of shoulders and grinner of grins in more-or-less public circumstances. He seemed to be spending his life pretending to run for Elders-Quarum. As for his public behavior, something very close to that would be the only reasonable assumption for a neutral observer: /This person appears to be trying to sell his persona actively to people for some gain/, a very articulate and objective caveperson would say. And if he just shuts that off completely and becomes a different, increasingly nasty person in his presence... Grav was just not quite sure what to do with that.
 
 Verk automatically smiled broadly at Grav as he walked into the otherwise empty relief-burrow to see Grav urinating with his back to the entrance. Grav therefore did not see this smile, though he knew someone was there.
 
@@ -53,7 +53,7 @@ It often seemed that Verk could make it harder for him to do this, as if he had 
 
 Verk made a hissing sound that Grav couldn't categorize for meaning, as he could not comfortably turn to look at Verk.
 
-"What are you doing today?", asked Verk, still not /using/ the relief-burrow, but now standing where Grav could comfortably look at him, now facial expressions could be used to hopefully glean more meaning from inscrutable Verk.
+"What are you doing today?", asked Verk, still not /using/ the relief-burrow, but now standing where Grav could comfortably look at him. Now facial expressions could be used to hopefully glean more meaning from inscrutable Verk.
 
 "Oh!" Grav was both excited to share some news and thankful for the change of topic. "Father-Brother Verk, Gog and I..."
 
@@ -449,7 +449,7 @@ It was a kind of crypto-stick, for it did lack rocks. And was blunt at the "bott
 
 "Exactly!"
 
-After washing the whole works in the river and scrubbing lightly with the finest silt they could find, the let the three pieces dry on the rocks for a palm or two and talked.
+After washing the whole works in the river and scrubbing lightly with the finest silt they could find, they let the three pieces dry on the rocks for a palm or two and talked.
 
 "Let's just decide right here and now that neither of us are going to crack. It's like a secret you're sworn to keep, except in this case you are obliged to always keep up an act: We have no idea it looks like a grown-man's pebble-twig. We think it looks more like a kind of fish we saw once; exactly like that kind of fish! We're biased in that direction. We are deaf to the innuendos of even our closest-circle.", said Gog with some certainty.
 
